--- a/pagina.css
+++ b/pagina.css
@@ -9,6 +9,7 @@
 }
 body{
     margin: 0;
+    padding: 0;
     overflow-x: hidden;
 }
 .no-scroll{
@@ -20,7 +21,7 @@ header{
     flex-direction: column;
     margin: 0;
     top:0;
-    height: 60px;
+    height: 45px;
     width: 100%;
     position: fixed;
     z-index: 20;
@@ -94,9 +95,6 @@ width: 100%;
     transition: 0.5s;
     cursor: pointer;
 }
-.img1{
-    height: 110%;
-}
 .re{
 height: 100%;
 }
@@ -126,7 +124,6 @@ menu{
     flex-direction: column;
     font-size: 0px;
     padding: 0;
-    margin-top: 50px;
     font-family:'futur', sans-serif;
     font-weight:800;
     background-color: black;
@@ -153,7 +150,7 @@ menu{
 .menues{
     animation: 0.5s men;
     height: calc(100% - 50px);
-    font-size: 50px;
+    font-size: 40px;
 }
 block{
     margin: 8px;
@@ -161,7 +158,7 @@ block{
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 40px;
+    height: 35px;
     background: transparent;
     gap: 3%;
 }
@@ -254,8 +251,9 @@ margin-left: -3%;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    padding-top: 2%;
+    padding-top: 4%;
     padding-bottom: 2%;
+    overflow: hidden;
 }
 .sec1,.sec2{
     width: 530px;
@@ -288,17 +286,19 @@ overflow: hidden;
     align-items: center;
     transition: .7s;
 }
-prev,next,prev1,next1{
+butonase,butonase1{
     position: absolute;
+    height: 240px;
+    width: 500px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    overflow: hidden;
+}
+prev,next,prev1,next1{
     height: 240px;
     width: 160px;
     cursor: pointer;
-}
-prev,prev1{
-    transform: translateX(-170px);
-}
-next,next1{
-    transform: translateX(170px);
 }
 .carus,.carus1{
 position: relative;
@@ -333,28 +333,16 @@ border-radius: 20px;
 position: absolute;
 box-shadow: 0px 0px 15px;
 }
-.im1{
+.im1,.ium1{
     transform: translateY(-165px)translateX(-85px);
 }
-.im2{
+.im2,.ium2{
     transform: translateY(-120px)translateX(115px);
 }
-.im3{
+.im3,.ium3{
     transform: translateY(165px)translateX(85px);
 }
-.im4{
-    transform: translateY(120px)translateX(-115px);
-}
-.ium1{
-    transform: translateY(-165px)translateX(-85px);
-}
-.ium2{
-    transform: translateY(-120px)translateX(115px);
-}
-.ium3{
-    transform: translateY(165px)translateX(85px);
-}
-.ium4{
+.im4,.ium4{
     transform: translateY(120px)translateX(-115px);
 }
 tit{
@@ -435,7 +423,7 @@ width: 90%;
     align-items: center;
     margin-top: 40px;
     width: 100px;
-    border-radius: 20px;
+    border-radius: 40px;
     height: 50px;
     background-color: #ffbdc3;
     font-family: sans-serif;
@@ -461,7 +449,7 @@ grid1{
 }
 .griderer1{
     max-height: 500px;
-    max-width: 500px;
+    max-width: 300px;
     border-radius: 20px;
     box-shadow: 0 0 10px;
 }
