--- a/pagina.css
+++ b/pagina.css
@@ -123,7 +123,8 @@ menu{
     justify-content: center;
     flex-direction: column;
     font-size: 0px;
-    padding: 0;
+    margin-top: 35px;
+    padding-left: 0%;
     font-family:'futur', sans-serif;
     font-weight:800;
     background-color: black;
@@ -146,11 +147,13 @@ menu{
     animation: 0.5s men1;
     height: 0;
     font-size: 0;
+    padding: 0;
 }
 .menues{
     animation: 0.5s men;
     height: calc(100% - 50px);
     font-size: 40px;
+    padding-bottom: 30px;
 }
 block{
     margin: 8px;
@@ -231,7 +234,7 @@ margin-left: -3%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: url('DSC_0024.jpg');
+    background: url('DSC_0024.webp');
     background-size: cover;
     width:100%;
     background-repeat: no-repeat;
@@ -348,7 +351,10 @@ box-shadow: 0px 0px 15px;
 tit{
     width: 100%;
     text-align: center;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: sans-serif;
+    color: black;
+    font-size: 20px;
+    font-weight: 900;
 }
 ali{
     width: 100%;
@@ -397,7 +403,7 @@ loader{
     width: 100%;
     position: absolute;
     opacity: 1;
-    background: url('DSC_0024.jpg');
+    background: url('DSC_0024.webp');
     background-size: cover;
     background-repeat: no-repeat;
 }
